Fix top margin on mobile results page

--- a/react/app-main/components/SearchResultsPage/search-results-page.css
+++ b/react/app-main/components/SearchResultsPage/search-results-page.css
@@ -23,7 +23,7 @@
 }
 
 .search-results-page__title--mobile {
-    margin-top: 10px;
+    margin-top: 30px;
     font-size: 6vw;
     text-align: center;
 }
